Update README
Explanation of JavaFX and the prototype.